Change test on main page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="features" class="features">
       <div class="container">
         <h4>SOLVES PROBLEMS</h4>
-        <h2>Moveroo is an opportunity <br> to emigrate without problems.</h2>
+        <h2>Moveroo is an opportunity <br> to integrate in Sweden without problems.</h2>
         <div class="row-boxes">
           <div class="col-unit">
             <img src="assets/id-card-unit.png">
