--- a/index.html
+++ b/index.html
@@ -96,28 +96,28 @@
               <div class="flex-item-icon"><img src="assets/list-item-1.png"></div>
               <div class="flex-item-text">
                 <span>Guidance and support in your immigration journey</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>by connecting you with expert advice and personalized checklist.</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-2.png"></div>
               <div class="flex-item-text">
                 <span>Overview of each process and steps you need to take</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>including timelines, visa categories, and legal requirements.</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-3.png"></div>
               <div class="flex-item-text">
                 <span>Actionable instructions on how to apply and navigate</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>bureaucraticy, from form submissions to final steps</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-4.png"></div>
               <div class="flex-item-text">
                 <span>Resources and information which will help you prepare your documents</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>, such as templates, transaltion services, and official goverment services.</div>
               </div>
             </div>
           </div>
@@ -131,35 +131,35 @@
               <div class="flex-item-icon"><img src="assets/list-item-5.png"></div>
               <div class="flex-item-text">
                 <span>Recommendations from locals about the best places to eat, visit, or shop, providing an authentic experience of the area.</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>Start your adventure with our app!</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-6.png"></div>
               <div class="flex-item-text">
                 <span>Get tips on navigating the city or neighborhood, including public transportation guides, maps, and shortcuts to ease the transition into a new area.</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>Find the best way how to travel!</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-7.png"></div>
               <div class="flex-item-text">
                 <span>Budgeting advice and tips on how to manage expenses effectively in a new city or country.</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>Save your budget with us!</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-8.png"></div>
               <div class="flex-item-text">
                 <span>Access a curated list of essential emergency contacts, such as hospitals, police stations, and local services, providing a safety net in case of unforeseen situations.</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>Provide best services for your family!</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-9.png"></div>
               <div class="flex-item-text">
                 <span>Stay updated on upcoming events, festivals, and activities happening in the area to immerse oneself in the local culture and social scene.</span>
-                <div>You’re eligible to upgrade to a new iPhone once you’ve made 12 payments. Just trade in your current iPhone and start.</div>
+                <div>Find your new friends and join social live in Sweden!</div>
               </div>
             </div>
           </div>
