--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
               <div class="flex-item-icon"><img src="assets/list-item-3.png"></div>
               <div class="flex-item-text">
                 <span>Actionable instructions on how to apply and navigate</span>
-                <div>bureaucraticy, from form submissions to final steps</div>
+                <div>bureaucracy, from form submissions to final steps</div>
               </div>
             </div>
             <div class="flex-container">
               <div class="flex-item-icon"><img src="assets/list-item-4.png"></div>
               <div class="flex-item-text">
                 <span>Resources and information which will help you prepare your documents</span>
-                <div>, such as templates, transaltion services, and official goverment services.</div>
+                <div>such as templates, transaltion services, and official goverment services.</div>
               </div>
             </div>
           </div>
